Kubernetes Yaml/client-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  labels:
    app: react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
      - name: react-app
        image: b2012283/client-app
        ports:
        - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: react-app
spec:
  type: ClusterIP
  selector:
    app: react-app
  ports:
    - port: 5173
      targetPort: 5173
