Kubernetes Yaml/spring-boot-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-app
  template:
    metadata:
      labels:
        app: spring-boot-app
    spec:
      containers:
      - name: spring-boot-app
        image: b2012283/back-end-test
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app
spec:
  type: ClusterIP
  selector:
    app: spring-boot-app
  ports:
    - port: 8080
      targetPort: 8080
